--- a/src/assets/LandingSection.css
+++ b/src/assets/LandingSection.css
@@ -1,25 +1,3 @@
-:root {
-	--fs-xl: clamp(1rem, 12vw + 1rem, 4rem);
-	--fs-600: 2rem;
-	--fs-400: 1rem;
-}
-
-@media (max-width: 70em) {
-	:root {
-		--fs-xl: 1.25rem;
-		--fs-600: 3rem;
-		--fs-400: 1.125rem;
-	}
-}
-
-@media (max-width: 40em) {
-	:root {
-		--fs-xl: 1rem;
-		--fs-600: 1.5rem;
-		--fs-400: .5rem;
-	}
-}
-
 .grain-container {
 	background-color: rgb(176, 0, 0);
 	background-image: radial-gradient(at 37% 28%, rgb(0, 0, 0) 0px, transparent 50%),
@@ -42,7 +20,7 @@
 }
 
 #title {
-	font-size: var(--fs-xl);
+	/* font-size: var(--fs-xl); */
 	position: relative;
 	width: max-content;
 }
@@ -81,49 +59,3 @@
 		background: transparent;
 	}
 }
-/* .grain-container:after {
-	animation: grain 8s steps(10) infinite;
-	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/paper-pattern.png);
-	content: "";
-	opacity: 0.35;
-	position: fixed;
-	top: -110%;
-	left: -50%;
-	height: 300%;
-	width: 300%;
-	
-} */
-
-/* @keyframes grain {
-	0%,
-	100% {
-		transform: translate(0, 0);
-	}
-	10% {
-		transform: translate(-5%, -10%);
-	}
-	20% {
-		transform: translate(-15%, 5%);
-	}
-	30% {
-		transform: translate(7%, -25%);
-	}
-	40% {
-		transform: translate(-5%, 25%);
-	}
-	50% {
-		transform: translate(-15%, 10%);
-	}
-	60% {
-		transform: translate(15%, 0%);
-	}
-	70% {
-		transform: translate(0%, 15%);
-	}
-	80% {
-		transform: translate(3%, 35%);
-	}
-	90% {
-		transform: translate(-10%, 10%);
-	}
-} */
