--- a/src/assets/About.css
+++ b/src/assets/About.css
@@ -3,5 +3,6 @@
 	border-color: transparent red;
 	border-style: solid;
 	border-width: 0.35em 0 0.35em 0.45em;
-	display: block;
+	/* display: block; */
+	display: flex;
 }
