changed paragraph font and edited resume

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,11 @@
 	a {
 		font-family: 'Orbitron', sans-serif;
 	}
+	#ProjectDescription,
+	#AboutParagraph,
+	#AboutParagraph a {
+		font-family: 'Play', sans-serif;
+	}
 }
 
 html,
